# ucc_info_chatbot

./: Dockerfile  README.md  main.py  pyproject.toml  scrape_with_crawlai.py  test.py  test_test.py
.github/workflows/: build-image.yml  deploy-update.yml
app/: main.py
app/api/: routes.py
app/api/routes/: routes.py
app/retrieval_gen/: rag.py  rag_gen.py
app/routes/: api_router.py
app/utils/: dedup.py  logger.py  scraper.py  vectorize.py
config/: settings.py
utils/: scraper.py  vectorize.py
